fix bug in confirmpassword visibility and size of eye icon

--- a/infinity_fashion/src/components/pages/signIn.module.css
+++ b/infinity_fashion/src/components/pages/signIn.module.css
@@ -313,9 +313,9 @@ a {
 }
 
 .eyeImage {
-  width: 35px;
+  width: 25px;
   /* Ajusta el tamaño según sea necesario */
-  height: 25px;
+  height: 15px;
 }
 
 .logo {
